removed libmagic dependency from OpenID endpoint, updated merge endpoints, OpenAPI /forums/{id} requests
